# reaktoro-usereos

./: .clang-format  CMakeLists.txt  configure.bat  example_config.json  run.bat
database/: aq17-thermofun.json  mines16-thermofun.json  mines19-thermofun.json
src/: main.cpp  reaktoro-usereos.cpp  reaktoro-usereos.hpp
